--- a/src/Components/Productlist.css
+++ b/src/Components/Productlist.css
@@ -55,15 +55,29 @@
     width: 200px;
    
   }
-.Cart1{
+
+   .image-box{
+    width: 15%;
+    text-align: center;
+   }
+   .about{
+    height: 77%;
+    padding-left: 25px;
+
+}
+   
+  
+.Cart{
     margin: auto;
-    width: 70%;
+    width: 50%;
     height: 30%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-   }
+    padding: 15px;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+}
+   
    .image-box{
     width: 15%;
     text-align: center;
@@ -87,7 +101,7 @@
     font-size: 18px;
     font-family: ‘Open Sans’;
     font-weight: 600;
-    color: #909090;
+    color: #000000;
    }
 
 
@@ -122,92 +136,3 @@
 .button:focus {
   background-color: #9CAFB7;
 }
-
-.Cart1{
-    margin: auto;
-    width: 70%;
-    height: 30%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-   }
-   .image-box{
-    width: 15%;
-    text-align: center;
-   }
-   .about{
-    height: 77%;
-    padding-left: 25px;
-
-}
-   
-   .title{
-    padding-top: 5px;
-    line-height: 10px;
-    font-size: 32px;
-    font-family: ‘Open Sans’;
-    font-weight: 800;
-    color: #202020;
-   }
-   .subtitle{
-    line-height: 10px;
-    font-size: 18px;
-    font-family: ‘Open Sans’;
-    font-weight: 600;
-    color: #909090;
-   }
-
-
-.button {
-  background-color: #7c6354;
-  border-radius: 8px;
-  border-style: none;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  height: 40px;
-  line-height: 20px;
-  list-style: none;
-  margin: 0;
-  outline: none;
-  padding: 10px 16px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transition: color 100ms;
-  vertical-align: baseline;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button:hover,
-.button:focus {
-  background-color: #9CAFB7;
-}
-.Cart2{
-    margin: auto;
-    width: 70%;
-    height: 30%;
-    display: flex;
-    padding: 15px;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-   }
-   .Cart3{
-    margin: auto;
-    width: 70%;
-    height: 30%;
-    display: flex;
-    padding: 15px;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-   }
